Start adding quality options

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-icons": "^3.9.0",
     "remote": "^0.2.6",
     "sanitize-filename": "^1.6.3",
     "throttle-debounce": "^2.1.0",
