Put limit on parallel downloads, fix hot reload ipc bug

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "build": {
     "appId": "yt-mp3",
     "directories": {
-      "output": "wintest"
+      "output": "win"
     },
     "files": [
       "main.js",
