--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "remote": "^0.2.6",
     "sanitize-filename": "^1.6.3",
     "throttle-debounce": "^2.1.0",
-    "ytdl-core": "2.1.5"
+    "ytdl-core": "^4.4.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
